slider images shifts fix

--- a/src/components/SimpleSlider/SimpleSlider.css
+++ b/src/components/SimpleSlider/SimpleSlider.css
@@ -71,6 +71,7 @@
     object-fit: cover;
     filter: brightness(0.5);
     object-position: center;
+    will-change: transform;
 }
 
 .SimpleSlider_img::before {
